--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-{<html>
+<html>
   <head>
     <title>React Parcel Micro App</title>
   </head>
@@ -6,4 +6,4 @@
     <div id="root"></div>
     <script src="./src/index.js"></script>
   </body>
-</html>}
+</html>
