Begin rewrite using hooks and reactn
https://github.com/CharlesStover/reactn

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>SPLOR</title>
+    <title>React Parcel Micro App</title>
   </head>
   <body>
     <div id="root"></div>
